Updated man-page to refer to laprograminfo.h.3

--- a/libamalgam/man/man3/amalgam.h.3
+++ b/libamalgam/man/man3/amalgam.h.3
@@ -21,7 +21,7 @@ Lets you configure build modes compiled time that can be identified
 .br
 run time. Stand alone module. 
 .PP
-.BI #include\ <lareleasemsg.h>
+.BI #include\ <laprograminfo.h>
 .br
 Lets you define the reassuring error message the end\-user sees,
 .br
@@ -106,7 +106,7 @@ stack traces.
 .BI lafailfast.h(3)
 .br
 .BI labuildmode.h(3)
-.BI lareleasemsg.h(3)
+.BI laprograminfo.h(3)
 .BI laexception.h(3)
 .BI lasyserr.h(3)
 .SH AUTHORS AND SOURCES
