Integrated la_dbglog into amalgam.

--- a/libamalgam/man/man3/labuildmode.h.3
+++ b/libamalgam/man/man3/labuildmode.h.3
@@ -130,7 +130,7 @@ Datatype for build mode:
 .RI typedef " " enum " " { " " LA__REL=0 "" ", " "" LA__DEV=1 "" ", " "" LA__DBG=2 " " } " " LA_BuildMode "" ;
 .br
 These are the values that
-.BI LA_BuildMode()
+.BI la_buildmode()
 returns to identify
 .br
 the
